edited layout of page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Anastasia Sweet-Saint Jean</title>
+<title>Bio Class Activity</title>
 </head>
 <body>
+<h1>Anastasia Sweet-Saint Jean</h1>
 <img src= "Me.jpeg" />
 <h1>All About Me!</h1>
 <p> I am a wife, a mother, and a student! I am working towards my coding certification in order to follow my goals of becoming a social media marketing specialist</p>
